flex/flex-tests/testData/js2_highlighting/CreateClassOrInterfaceAction10.js2
package {

import flash.events.IEventDispatcher;
public class CreateClassOrInterfaceAction10 {
  private function foo() : IEventDispatcher {
    return <error descr="Returned expression type Abc is not assignable to type IEventDispatcher">new <error descr="Unresolved type Abc">Abc</error>(0)</error>;
  }
}
}
